Implemented ancestors and descendants operations. Added test.

--- a/app/tests/normalmode/new.in
+++ b/app/tests/normalmode/new.in
@@ -1,3 +1,8 @@
 { "open": { "database": "db_project", "user": "postgres", "password": "qwerty"} }
 { "new": { "admin": 0, "passwd": "qwerty", "data":"dane wicewiceprezesa", "newpasswd"    :"qwerty", "emp1":1, "emp":2 } }
 { "new": { "admin": 0, "passwd": "qwerty", "data":"dane wiceprezesa2", "newpasswd"    :"qwerty", "emp1":0, "emp":3 } }
+{ "new": { "admin": 0, "passwd": "qwerty", "data":"dane pracownika", "newpasswd"    :"qwerty", "emp1":3, "emp":4 } }
+{ "new": { "admin": 0, "passwd": "qwerty", "data":"dane pracownika", "newpasswd"    :"qwerty", "emp1":3, "emp":7 } }
+{ "new": { "admin": 0, "passwd": "qwerty", "data":"dane pracownika", "newpasswd"    :"qwerty", "emp1":3, "emp":5 } }
+{ "new": { "admin": 0, "passwd": "qwerty", "data":"dane pracownika", "newpasswd"    :"qwerty", "emp1":5, "emp":6 } }
+{ "new": { "admin": 0, "passwd": "wtf", "data":"dane pracownika", "newpasswd"    :"qwerty", "emp1":0, "emp":3 } }
